--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,31 @@
 body{
-
+  background-color: turquoise;
 }
+
 h1 {
-  font-size: 5vw;
-  font-weight: 500;
+  font-size: 7vw;
+  font-weight: 600;
+  text-decoration:underline;
+  text-align: center;
 }
 
 #selfiePic{
   height: 600px;
   border-radius: 25%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border: 2px dashed red;
 }
 
 p{
-  font-family: 'Courier New', Courier, monospace;
+  background-color: yellow;
+  border: 1px solid black;
+  font-weight: 200;
+  font-stretch:expanded;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+footer{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
